fix IE: QResizeObservable object visibility and QList main flex

--- a/src/ie-compat/ie.ios.styl
+++ b/src/ie-compat/ie.ios.styl
@@ -51,7 +51,7 @@ ie_style = @block
 
   /* QList */
   .q-item-main
-    flex 1 1 100%
+    min-width 1px
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
   {ie_style}
